--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,27 +2,30 @@ version: '3'
 services:
 
   php:
-    container_name: krakenditor-php
-    image:          php:fpm-alpine3.10
+    container_name: krakend-multi-php
+    build:
+      context: .
     restart:        always
     volumes:
       - ./app:/var/www/html
+      - ./tmp:/var/www/html/tmp
     networks:
       - net
 
   nginx:
-    container_name: krakenditor-nginx
+    container_name: kraked-multi-nginx
     image:          nginx:1.17-alpine
     restart:        always
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ./logs:/var/log/nginx
       - ./app:/var/www/html
+      - ./tmp:/var/www/html/tmp
     labels:
       - traefik.enable=true
       - traefik.port=80
       - traefik.docker.network=traefik
-      - traefik.frontend.rule=Host:krakenditor.local
+      - traefik.frontend.rule=Host:krakendmulti.local
     networks:
       - traefik
       - net
