--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,8 @@ server {
 	server_name _;
 	root /var/www/html;
 	index index.php;
-	client_max_body_size 1G;
+  client_body_buffer_size 10M;
+	client_max_body_size 10M;
 
 	location / {
 		try_files $uri $uri/ /index.php?$args;
